osprey_worker/src/osprey/engine/query_language/tests/test_parse_query_to_validated_ast/test_disallows_unknown_call_nodes.txt
error: unknown function: `Foo`
--> main.sml:1:8
     |
   1 | Query = Foo()
     |         ^ called here